cargo-features = ["strip"]

[package]
name = "nizctl"
version = "0.1.0"
edition = "2018"

[profile.release]
lto = true
strip = true

[dependencies]
anyhow = "1.0.42"
hidapi = "1.2.6"
packed_struct = { version = "0.6", features = [ "byte_types_64" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "3.0.0-beta.2"
dialoguer = "0.8.0"
lazy_static = "1.4.0"
